[FIX] wrong color in tooltip

--- a/src/components/WinAnimation/WinAnimation.module.scss
+++ b/src/components/WinAnimation/WinAnimation.module.scss
@@ -40,6 +40,7 @@
 .tooltip {
   position: absolute;
   background-color: white;
+  color:black;
   padding: 0.5rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
